# kaggle-utils

./: LICENSE  pyproject.toml
src/kaggle_utils/dataset/: byol_constrastive_task.py  image_classification_task.py  simclr_contrastive_task.py  task.py
src/kaggle_utils/datasets/: imaterialist_fashion_2021_fgvc8.py
src/kaggle_utils/datasource/: __init__.py  local_datasource.py  remote_datasource.py
src/kaggle_utils/datasource/kaggle/: __init__.py
src/kaggle_utils/datasource/kaggle_source/: __init__.py
src/kaggle_utils/datasource/type/: __init__.py
src/kaggle_utils/datasource/type/image/: __init__.py  classification.py
src/kaggle_utils/kaggle_source/: __init__.py
src/kaggle_utils/task/: __init__.py  byol_constrastive_task.py  image_classification_task.py  simclr_contrastive_task.py
